# cerebra

./: .env.example  .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FIXLIST.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  run.bat  run.ps1  run.sh  start_dev.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-gh-pages.yml
PLAN/: AGENT_BUILDER_FEATURES.md  ARCHITECTURE.md  PLAN.md  ROADMAP.md  TECHSTACK.md  UI_POLISH.md  UX_IMPL.md  UX_PLAN.md
backend/: .dockerignore  README.md  _test_wc2.py  alembic.ini  cerebra.db-shm  cerebra.db-wal  e2e_report.json  pyproject.toml  requirements.txt  run_test_server.py  start_dev.py  test.db  test_all_endpoints.py  test_provider_api.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_token_cost_to_runs.py  0003_add_agent_templates.py  0004_add_logs_table.py  0005_add_conversation_memory.py  0006_add_agent_provider_id.py
backend/app/: auth.py  bus.py  config.py  db.py  docs.py  logging_config.py  main.py  openapi_patch.py  ratelimit.py  scheduler.py  schemas.py  security.py
backend/app/api/: agent_templates.py  agents.py  channels.py  human.py  logs.py  providers.py  runs.py  templates.py  tools.py  workflows.py  ws.py
backend/app/channels/: base.py  telegram.py
backend/app/models/: __init__.py  agent.py  agent_template.py  conversation_memory.py  log.py  message.py  provider.py  run.py  tool.py  workflow.py
backend/app/runtime/: compiler.py  executor.py  llm.py  llm_providers.py  memory.py  state.py
backend/app/runtime/nodes/: agent_node.py  human_node.py  router_node.py
backend/app/runtime/tools/: __init__.py  calculator.py  circl_cve.py  code_interpreter.py  current_time.py  http_request.py  json_tool.py  qdrant_tool.py  random_number.py  registry.py  text_analyzer.py  url_info.py  web_crawler.py  web_search.py
backend/app/services/: agent_service.py  agent_template_service.py  log_service.py  provider_service.py  run_service.py  tool_service.py  workflow_service.py
backend/templates/: simple_research.json  web_research_agent.json
backend/tests/: conftest.py  test_agent_crud.py  test_auth.py  test_config.py  test_multi_agent.py  test_run_execution.py  test_runs_api.py  test_tools.py  test_workflow_compile.py  test_workflows_crud.py
docs/: API.md  API_DOCS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  PROVIDERS.md  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agents.ts  auth.ts  channels.ts  client.ts  logger.ts  providers.ts  runs.ts  templates.ts  tools.ts  workflows.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: AgentsPage.tsx  ChannelsPage.tsx  (+7 more)
scripts/: README.md  pre_commit_secret_scan.py  reset_and_start.bat  reset_and_start.sh  run.bat  run.ps1  run.sh  start_dev.bat  telegram_diagnostic.py
site/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
site/public/: robots.txt  sitemap.xml
site/src/: App.tsx  docs.ts  index.css  main.tsx
templates/: research_and_report.json  support_triage.json
(+66 files in other folders)
