[project]
name = "orchid-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "langgraph>=0.2.60",
    "google-genai>=1.10.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "cryptography>=44.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
